k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: showcase-api-service
  labels:
    app: showcase-api
spec:
  type: ClusterIP # Internal cluster routing only. Exposed externally via Ingress.
  selector:
    app: showcase-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
